[調整] 投注單TabLayout tab text

--- a/app/src/main/res/layout/item_bet_list_tab.xml
+++ b/app/src/main/res/layout/item_bet_list_tab.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="单项投注"
         android:textAllCaps="false"
         android:textColor="@color/selector_bet_tab_text"
         android:textSize="@dimen/textSize14sp"
@@ -19,7 +18,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/bet_list_single_type" />
 
     <View
         android:id="@+id/divider"
