--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,9 @@
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationStyle</item>
         <item name="android:overScrollMode">never</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:navigationBarColor">@color/color_0764DE</item>
+        <item name="android:statusBarColor">@color/color_0764DE</item>
 
         <!-- about issue 24880 在設定window背景色時在暗色模式時也會吃這裡 不會吃 night/styles -->
         <!-- <item name="android:windowBackground"></item> -->
