--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="org.cxct.sportlottery.ui.withdraw.WithdrawFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="org.cxct.sportlottery.ui.withdraw.WithdrawFragment">
 
     <LinearLayout
         android:id="@+id/ll_tab_layout"
@@ -16,7 +16,6 @@
         tools:context="org.cxct.sportlottery.ui.common.CustomTabLayout">
 
         <com.google.android.material.tabs.TabLayout
-            app:tabTextAppearance="@style/NoUppercaseTab"
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -27,6 +26,7 @@
             app:tabPaddingStart="25dp"
             app:tabRippleColor="@null"
             app:tabSelectedTextColor="@color/color_CCCCCC_333333"
+            app:tabTextAppearance="@style/NoUppercaseTab"
             app:tabTextColor="@color/color_A3A3A3_666666">
 
             <com.google.android.material.tabs.TabItem
@@ -57,10 +57,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@color/color_191919_FCFCFC"
         android:gravity="start|center_vertical"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
         android:paddingStart="24dp"
         android:paddingTop="12dp"
         android:paddingEnd="24dp"
@@ -236,11 +236,11 @@
                 android:background="@drawable/selector_commission_detail_button"
                 android:enabled="false"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:paddingHorizontal="10dp"
                 android:text="@string/commission_detail"
                 android:textColor="@color/selector_blue_light_gray"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/btn_info"
@@ -262,6 +262,19 @@
             app:cvInputType="numberPassword"
             app:cvTitle="@string/withdraw_password" />
 
+
+        <TextView
+            android:id="@+id/tv_withdrawal_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_CCCCCC_333333"
+            android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginStart="@dimen/margin_10"
+            android:text="@string/total_withdrawal"/>
+
+
         <TextView
             android:id="@+id/btn_withdraw"
             android:layout_width="match_parent"
@@ -271,11 +284,11 @@
             android:background="@drawable/bg_radius_20_button_dusk"
             android:paddingVertical="9dp"
             android:text="@string/submit"
-            android:textStyle="bold"
-            android:textAllCaps="true"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@color/color_FFFFFF_FFFFFF"
-            android:textSize="@dimen/textSize16sp" />
+            android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_notification"
