--- a/app/src/main/res/drawable/ic_arrow_gray_down.xml
+++ b/app/src/main/res/drawable/ic_arrow_gray_down.xml
@@ -1,10 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10dp"
+    android:width="16dp"
     android:height="10dp"
-    android:viewportWidth="10"
+    android:viewportWidth="16"
     android:viewportHeight="10">
   <path
-      android:pathData="M4.773,8L0,2 1.625,2 5.001,6.243 8.376,2 10,2 10,2.001 5.227,8z"
-      android:fillColor="#666"
-      android:fillType="evenOdd"/>
+      android:pathData="M7.554,7.82L3.685,4.049C3.438,3.809 3.438,3.42 3.685,3.18C3.931,2.94 4.33,2.94 4.576,3.18L8,6.517L11.424,3.18C11.67,2.94 12.069,2.94 12.315,3.18C12.562,3.42 12.562,3.809 12.315,4.049L8.446,7.82C8.322,7.94 8.161,8 8,8C7.839,8 7.677,7.94 7.554,7.82Z"
+      android:strokeWidth="1"
+      android:fillColor="#999999"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"/>
 </vector>
