--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -139,7 +139,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:cvIcon="@drawable/ic_menu_other_bet_record"
+                tools:visibility="visible"
+                app:cvIcon="@drawable/ic_profile_center_bet_record"
                 app:cvTitle="@string/other_bet_record" />
 
             <org.cxct.sportlottery.ui.menu.MenuItem
