--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -262,6 +262,20 @@
             app:cvInputType="numberPassword"
             app:cvTitle="@string/withdraw_password" />
 
+
+        <TextView
+            android:id="@+id/tv_withdrawal_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginStart="@dimen/margin_10"
+            android:text="@string/total_withdrawal"/>
+
+
+
         <TextView
             android:id="@+id/btn_withdraw"
             android:layout_width="match_parent"
