--- a/app/src/main/res/drawable-night/bg_title.xml
+++ b/app/src/main/res/drawable-night/bg_title.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#0054ac"
-        android:endColor="#0068d6"
-        android:angle="135"/>
+    <solid
+        android:color="@color/color_191919" />
 </shape>
