--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -80,7 +80,7 @@
                 <EditText
                     android:id="@+id/et_bet_parlay"
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="@dimen/et_bet_height"
                     android:layout_marginStart="@dimen/margin_24"
                     android:layout_marginTop="@dimen/margin_8"
                     android:layout_marginEnd="17dp"
