--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -110,7 +110,7 @@
 
                     <FrameLayout
                         android:layout_width="0dp"
-                        android:layout_height="40dp"
+                        android:layout_height="@dimen/et_bet_height"
                         android:layout_marginEnd="17dp"
                         android:layout_weight="6">
 
