--- a/app/src/main/res/layout/content_cant_parlay_warn.xml
+++ b/app/src/main/res/layout/content_cant_parlay_warn.xml
@@ -5,39 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_above="@+id/cl_total_info"
-    android:background="@color/color_191919_FCFCFC"
-    android:divider="@drawable/divider_color_white8"
+    android:background="@color/color_141414_F3F4F5"
     android:orientation="vertical"
-    android:showDividers="end">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingStart="8dp"
-        android:paddingTop="18dp"
-        android:paddingEnd="8dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="5.5dp"
-            android:src="@drawable/oval_red_6dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/bet_list_cant_parlay_warn"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
-    </LinearLayout>
+    android:showDividers="end"
+    tools:ignore="SpUsage">
 
     <View
-        android:id="@+id/shadow"
+        android:id="@+id/line"
         android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:background="@drawable/bg_gradient_bottom_sheet_shadow" />
+        android:layout_height="@dimen/margin_1"
+        android:layout_marginHorizontal="@dimen/margin_10"
+        android:background="@color/color_1F1F1F_e6e6e6" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_odds_change_tip"
+        android:drawablePadding="@dimen/margin_6"
+        android:paddingHorizontal="@dimen/margin_24"
+        android:paddingStart="@dimen/margin_24"
+        android:paddingTop="@dimen/margin_12"
+        android:paddingBottom="@dimen/margin_18"
+        android:text="@string/bet_list_cant_parlay_warn"
+        android:textColor="@color/color_E44438_e44438"
+        android:textSize="@dimen/textSize12sp" />
+
 </LinearLayout>
