[Fix] encrypt password by md5 & input layout & strings

--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     app:cardCornerRadius="8dp"
-    tools:ignore="SpUsage">
+    tools:ignore="SpUsage,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:gravity="start"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="20dp"
             android:text="@string/self_limit_input_password_for_confirm"
@@ -45,26 +46,26 @@
         <!-- 一定要用scroll view包起來 不然高度會異常 套件bug -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="8dp">
 
             <org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes
                 android:id="@+id/tfb_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="8dp"
                 app:endIcon="@drawable/ic_eye_close"
-                app:hintText="@string/password_hint"
-                app:iconSignifier="@drawable/ic_login_password"
-                app:isResponsiveIconColor="false"
-                app:labelText="@string/login_password"
-                app:labelTextStyle="normal"
-                app:primaryColor="@color/color_AFAFB1">
+                app:hideSelectedTitle="true"
+                app:singleText="@string/self_limit_submit_input_password_hint"
+                app:singleTextColor="@color/color_404040_cccccc"
+                app:singleTextStartPadding="20"
+                app:singleTextStyle="normal">
 
                 <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
                     android:id="@+id/et_password"
+                    android:layout_marginStart="20dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:maxLines="1"
@@ -76,48 +77,47 @@
 
         </ScrollView>
 
-        <!--        <org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes-->
-        <!--            android:id="@+id/tfb_password"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginHorizontal="20dp"-->
-        <!--            android:layout_marginTop="8dp"-->
-        <!--            app:endIcon="@drawable/ic_eye_close"-->
-        <!--            app:hintText="@string/password_hint"-->
-        <!--            app:iconSignifier="@drawable/ic_login_password"-->
-        <!--            app:isResponsiveIconColor="false"-->
-        <!--            app:labelText="@string/login_password"-->
-        <!--            app:labelTextStyle="normal"-->
-        <!--            app:primaryColor="@color/color_AFAFB1">-->
-
-        <!--            <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText-->
-        <!--                android:id="@+id/et_password"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:imeOptions="actionNext"-->
-        <!--                android:inputType="textPassword"-->
-        <!--                android:maxLines="1"-->
-        <!--                android:textColor="@color/color_FFFFFF_DE000000"-->
-        <!--                android:textCursorDrawable="@drawable/cursor_common"-->
-        <!--                android:textSize="@dimen/textSize14sp" />-->
-
-        <!--        </org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes>-->
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="14dp"
             android:background="@color/color_191919_EEEFF0" />
 
-        <TextView
-            android:id="@+id/tv_submit"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/self_limit_submit_button"
-            android:textAllCaps="true"
-            android:textColor="@color/color_317FFF_0760D4"
-            android:textSize="@dimen/textSize14sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_close"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/bottom_sheet_close"
+                android:textAllCaps="true"
+                android:textColor="@color/color_317FFF_0760D4"
+                android:textSize="@dimen/textSize14sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/color_191919_EEEFF0" />
+
+            <TextView
+                android:id="@+id/tv_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/self_limit_submit_button"
+                android:textAllCaps="true"
+                android:textColor="@color/color_317FFF_0760D4"
+                android:textSize="@dimen/textSize14sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
