--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_login"
+    tools:ignore="SpUsage"
     tools:context=".ui.login.signIn.LoginActivity">
 
     <ImageView
@@ -232,12 +233,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cb_remember_password" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/block_sign_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:gravity="center"
+                android:paddingHorizontal="12dp"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/btn_login">
 
@@ -267,13 +268,20 @@
                     android:textColor="@color/colorOrange"
                     android:textSize="@dimen/textSize12sp" />
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/btn_service"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:padding="4dp"
+                    android:text="@string/btn_service"
+                    android:textColor="@color/colorOrange"
+                    android:textSize="@dimen/textSize12sp" />
 
+            </RelativeLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
