--- a/app/src/main/res/layout/shimmer_placeholder_layout.xml
+++ b/app/src/main/res/layout/shimmer_placeholder_layout.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background"
     android:minHeight="230dp"
     android:orientation="horizontal"
-    android:background="@color/background">
+    tools:ignore="RtlSymmetry">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        tools:ignore="RtlSymmetry">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="180dp"
                 android:layout_height="18dp"
                 android:layout_marginTop="4dp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="150dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="5sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="100dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="5sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
         </LinearLayout>
 
         <LinearLayout
@@ -43,27 +47,27 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="180dp"
                 android:layout_height="18dp"
                 android:layout_marginTop="4dp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="150dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="5sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="100dp"
                 android:layout_height="12dp"
                 android:layout_marginTop="5sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
         </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -71,6 +75,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -78,23 +83,25 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="5dp">
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -106,19 +113,19 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8sp"
-                android:background="@color/color_cccccc" />
+                android:background="@drawable/bg_preload" />
         </LinearLayout>
     </LinearLayout>
 
