[modify] 1. 調整快捷注單背景顏色，點擊背景行為 2. 依據tab位置顯示下注和可贏金額 3. 區分單注和串關下注邏輯

--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -113,13 +113,13 @@
             android:layout_height="55dp"
             app:layout_constraintBottom_toBottomOf="@id/viewBottom"/>
 
-        <!-- 投注單 -->
+        <!-- 投注單 & 快捷投注單 -->
         <FrameLayout
             android:id="@+id/flBetList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="gone" />
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
