--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -116,14 +116,14 @@
                     android:layout_height="55dp"
                     app:layout_constraintBottom_toBottomOf="parent" />
 
-                <!-- 快捷投注單 -->
-                <!-- 因左邊選單需在快捷注單上層 故在此將快捷注單獨立顯示-->
-                <FrameLayout
-                    android:id="@+id/fl_fast_bet"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    tools:visibility="gone" />
+<!--                &lt;!&ndash; 快捷投注單 &ndash;&gt;-->
+<!--                &lt;!&ndash; 因左邊選單需在快捷注單上層 故在此將快捷注單獨立顯示&ndash;&gt;-->
+<!--                <FrameLayout-->
+<!--                    android:id="@+id/fl_fast_bet"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    tools:visibility="gone" />-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -144,11 +144,11 @@
 
         </androidx.drawerlayout.widget.DrawerLayout>
 
-        <!-- 投注單列表 -->
+        <!-- 投注單列表 & 快捷投注單 -->
         <FrameLayout
             android:id="@+id/fl_bet_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:visibility="gone" />
 
