--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -56,8 +56,7 @@
                         android:src="@drawable/ic_tennis_icon"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_odds_content"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tv_odds_content"
-                        app:tint="@color/color_F79D3A" />
+                        app:layout_constraintTop_toTopOf="@+id/tv_odds_content" />
 
 
                     <!--playName + spread + @ + odds + (oddsType)-->
