--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -13,6 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
         android:background="@color/transparent_black_50"
         android:orientation="vertical"
         tools:ignore="SpUsage, ContentDescription">
@@ -398,35 +400,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
                     app:layout_constraintStart_toEndOf="@+id/title_all_bet"
                     app:layout_constraintTop_toTopOf="@+id/title_all_bet" />
-
-                <TextView
-                    android:id="@+id/tv_all_bet_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
-                    android:textColor="@color/color_CCCCCC_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
-                    app:layout_constraintStart_toEndOf="@+id/divider_all_bet"
-                    app:layout_constraintTop_toTopOf="@+id/title_all_bet"
-                    tools:text="0" />
-
-                <TextView
-                    android:id="@+id/tv_total_bet_amount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="6dp"
-                    android:gravity="end"
-                    android:textColor="@color/color_CCCCCC_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tv_all_bet_count"
-                    app:layout_constraintTop_toTopOf="@+id/title_all_bet"
-                    tools:text="0.000 RMB" />
 
                 <TextView
                     android:id="@+id/title_winnable_amount"
