--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -195,6 +195,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/color_141414_F3F4F5"
                 android:layout_above="@+id/ll_container"
                 android:layout_below="@id/betTypeTabLayout">
 
