--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -155,8 +155,10 @@
                     android:id="@+id/layoutKeyBoard"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
+                    android:layout_marginTop="@dimen/margin_10"
                     android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage"
+                    tools:visibility="gone" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
