--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -73,7 +73,8 @@
     <color name="color_303030_E2E2E2">@color/color_303030</color>
     <color name="color_313131_e2e2e2">@color/color_313131</color>
     <color name="color_5d5d5d_888888">@color/color_5d5d5d</color>
-    <color name="color_e5e5e5_666666">@color/color_e5e5e5</color>
+    <color name="color_bbbbbb_ffffff">@color/color_BBBBBB</color>
+
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_white_70</color>
