--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -252,6 +252,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:visibility="gone"
+                        android:layout_marginHorizontal="24dp"
                         android:layout_marginTop="10dp"
                         app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />
                     <!--                        <View-->
