--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -155,7 +155,8 @@
                     android:id="@+id/layoutKeyBoard"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="10dp"
                     android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage"
                     tools:visibility="gone" />
