--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -169,6 +169,7 @@
                 android:id="@+id/layoutKeyBoard"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
+                android:layout_marginHorizontal="24dp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@+id/layoutInput" />
 
