--- a/app/src/main/res/layout/item_number_keyboard_layout.xml
+++ b/app/src/main/res/layout/item_number_keyboard_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="108dp"
-    android:background="@color/color_060F20"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bg_frame_4dp_dark"
     android:orientation="vertical"
     android:paddingStart="@dimen/margin_3"
     android:paddingTop="@dimen/margin_3"
@@ -13,15 +15,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingVertical="@dimen/margin_3">
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/tvMax"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
@@ -35,42 +34,42 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+25"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/tvPlus2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+50"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/tvPlus3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+75"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
 
         <ImageView
@@ -78,12 +77,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_button_keyboard"
             android:gravity="center"
             android:padding="@dimen/margin_6"
-            android:src="@drawable/ic_clear" />
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_close_dark" />
 
         <TextView
             android:id="@+id/tvPlus4"
@@ -105,15 +104,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingVertical="@dimen/margin_3">
+        android:layout_marginTop="3dp"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/tvNum1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:gravity="center"
             android:text="1"
@@ -126,7 +123,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -139,7 +135,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -152,7 +147,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -165,7 +159,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -178,7 +171,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -196,14 +188,12 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/color_060F20"
-        android:paddingVertical="@dimen/margin_3">
+        android:layout_marginTop="3dp">
 
         <TextView
             android:id="@+id/tvNum7"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -216,7 +206,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -229,7 +218,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:gravity="center"
@@ -245,7 +233,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -258,7 +245,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_radius_4_button_fffdfe"
             android:textColor="@color/color_333333"
@@ -273,11 +259,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
             android:background="@drawable/bg_button_keyboard"
             android:gravity="center"
             android:padding="@dimen/margin_6"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_delete" />
     </LinearLayout>
 
